<resources>
    <string name="app_name">Personify</string>
    <string name="task_name">Task Name :</string>
    <string name="date">Date :</string>
    <string name="status">Status :</string>
    <string name="priority">Priority :</string>
    <string name="remarks">Remarks :</string>
    <string name="eg_laundry">eg. Laundry</string>
    <string name="description_of_the_task">Description of the task. eg. Weekly laundry for my family.</string>
    <string name="delete">delete</string>
    <string name="clear">clear</string>
    <string name="date_picker">date picker</string>
    <string name="enter_password_here">enter password here</string>
    <string name="enter_email_here">enter email here</string>
    <string name="sign_in_your_account_here">Sign in your account here</string>
    <string name="request_for_new_password">request for new password</string>
    <string name="i_need_a_new_password">I need a new password</string>
    <string name="login">login</string>
    <string name="sign_up">SignUp</string>
    <string name="page_sub_title">Your personal assistant with simplicity at heart</string>
    <string name="page_title">Welcome to Personify</string>
    <string name="quote">Life is really simple, but we insist on making it complicated. &#8212; by Confucius</string>
    <string name="password">password</string>
    <string name="_6_characters_minimum">6 characters minimum&#8230;</string>
    <string name="create_account">Create Account</string>
    <string name="display_name">display name&#8230;</string>
    <string name="email">Email</string>
    <string name="to_let_me_know_more_about_you">To let me know more about you&#8230;</string>
    <string name="for_sign_in_and_recover_password">For sign in and recover password&#8230;</string>
    <string name="verify_password">verify password</string>
    <string name="to_help_you_practise_with_your_new_password">To help you practise with your new password&#8230;</string>
    <string name="please_enter_the_email_address_you_used_for_the_app_and_follow_the_email_you_received_for_steps_to_reset_your_password">Please enter the email address you used for the app, and follow the email you received for steps to reset your password.</string>
    <string name="enter_your_email_here">enter your email here</string>
    <string name="request_for_a_new_password_here">Request for a new password here</string>
    <string name="confirm">confirm</string>
    <string name="cancel">Cancel</string>
    <string name="app_title">Personify</string>
    <string name="settings">settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="no_data_yet">No data yet&#8230;</string>
    <string name="longest_overdue">Longest overdue:</string>
    <string name="earliest_completion">Earliest completion:</string>
    <string name="completion_on_time">Completion on time:</string>
    <string name="overdue">Overdue:</string>
    <string name="how_would_you_like_me_to_call_you">How would you like me to call you?</string>
    <string name="your_current_password">your current password&#8230;</string>
    <string name="current_password">Current password</string>
    <string name="enter_your_new_email_here">enter your new email here&#8230;</string>
    <string name="do_you_want_to_change_your_email">Do you want to change your email?</string>
    <string name="save">save</string>
    <string name="delete_my_account">delete my account</string>
    <string name="welcome_user">Welcome back, %s.</string>
    <string name="welcome_new_user">Welcome, %s.</string>
    <string name="alert_title_delete_profile">Note!!!</string>
    <string name="alert_content_delete_profile">Are you sure you want to delete your account? All data will be removed and unrecoverable after that.</string>
    <plurals name="number_of_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="number_percent">%d\%%</string>
    <string name="background">background</string>
    <plurals name="to_due">
        <item quantity="one">%d day to due date</item>
        <item quantity="other">%d days to due date</item>
    </plurals>
    <plurals name="overdue">
        <item quantity="one">Overdue by %d day</item>
        <item quantity="other">Overdue by %d days</item>
    </plurals>
    <string-array name="status">
        <item>To do</item>
        <item>In progress</item>
        <item>Done</item>
        <item>Overdue</item>
    </string-array>
    <string-array name="priority">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="reset_password">An email has been sent to your mailbox.</string>
    <string name="failed_request_password">"Failed to request new password."</string>
    <string name="profile_picture">profile picture</string>
    <string name="view_tasks_that_were_completed">View tasks that were completed.</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="you_have_no_tasks_to_display">You have no tasks to display</string>
    <string name="alert_title_request_for_permission">Permission Required</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="permission_dialog_content">Permission to read your phone storage is required for choosing and displaying your profile picture.</string>
    <string name="permission_toast">Please enable permission to access you device storage.</string>
    <string name="change_consent_for_data_collection">Revoke consent</string>
    <string name="reminder">Reminder</string>
    <string name="channelDescription">Notify user the number of tasks due soon.</string>
    <string name="tasksDueSoon">Tasks due soon</string>
    <plurals name="numberOfTasksDueSoon">
        <item quantity="one">You have %d task due in % days. Hurry up and finish it.</item>
        <item quantity="other">You have %d tasks due in % days. Hurry up and finish it.</item>
    </plurals>
</resources>
