<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textVsPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailExplain"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/emailExplain2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/_6_characters_minimum"
            android:textAppearance="@style/TextAppearance.subtitle2"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" />

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="64dp"
            android:text="@string/create_account"
            android:textAppearance="@style/TextAppearance.H5"
            app:layout_constraintStart_toStartOf="@+id/nameText"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/display_name"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
            app:layout_constraintWidth_percent="0.85" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/TextAppearance.subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameExplain"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/nameExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/to_let_me_know_more_about_you"
            android:textAppearance="@style/TextAppearance.subtitle2"
            app:layout_constraintStart_toStartOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/nameText" />

        <TextView
            android:id="@+id/emailExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/for_sign_in_and_recover_password"
            android:textAppearance="@style/TextAppearance.subtitle2"
            app:layout_constraintStart_toStartOf="@+id/emailText"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <EditText
            android:id="@+id/verifyPasswordText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/verify_password"
            android:inputType="textPassword"
            android:textAppearance="@style/TextAppearance.subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailExplain2"
            app:layout_constraintWidth_percent="0.85" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/to_help_you_practise_with_your_new_password"
            android:textAppearance="@style/TextAppearance.subtitle2"
            app:layout_constraintStart_toStartOf="@+id/verifyPasswordText"
            app:layout_constraintTop_toBottomOf="@+id/verifyPasswordText" />

        <Button
            android:id="@+id/createAccountButton"
            style="@style/AppTheme.PrimaryButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="28dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/my_button_background"
            android:enabled="false"
            android:text="@string/create_account"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintWidth_percent="0.85" />

        <ImageView
            android:id="@+id/profilePhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/download"
            android:tint="@android:color/background_light"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintStart_toStartOf="@+id/pageTitle"
            app:layout_constraintTop_toBottomOf="@+id/pageTitle"
            app:srcCompat="@drawable/rectangle_image" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="60dp"
            android:clickable="true"
            android:focusable="true"
            android:tint="@color/textVsPrimary"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintStart_toStartOf="@+id/profilePhoto"
            app:layout_constraintTop_toTopOf="@+id/profilePhoto"
            app:srcCompat="@drawable/ic_add_black_24dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>